--- a/app/src/main/res/xml/pref_font.xml
+++ b/app/src/main/res/xml/pref_font.xml
@@ -22,12 +22,21 @@
          dismiss it. -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
     <ListPreference
-        android:defaultValue="-1"
+        android:defaultValue="0"
         android:entries="@array/pref_font_list_titles"
         android:entryValues="@array/pref_font_list_values"
         android:key="font_list"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
         android:title="@string/pref_title_font_picker" />
+
+    <ListPreference
+        android:defaultValue="0"
+        android:entries="@array/pref_font_size_titles"
+        android:entryValues="@array/pref_font_size_values"
+        android:key="font_size_list"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null"
+        android:title="@string/pref_title_font_size" />
 
 </PreferenceScreen>
