--- a/app/src/main/res/xml/pref_timer.xml
+++ b/app/src/main/res/xml/pref_timer.xml
@@ -1,30 +1,27 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- A 'parent' preference, which enables/disables child preferences (below)
-         when checked/unchecked. -->
-    <SwitchPreference
-        android:defaultValue="true"
-        android:key="timer_enabled"
-        android:title="@string/pref_title_disable_timer" />
+
+
+    <PreferenceCategory android:title="Timer Settings" android:key="TARGET_CATEGORY">
+        <!-- A 'parent' preference, which enables/disables child preferences (below)
+        when checked/unchecked. -->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="@string/timer_enabled_key"
+            android:title="@string/pref_title_disable_timer" />
+
+    </PreferenceCategory>
 
     <!-- Allows the user to choose a ringtone in the 'notification' category. -->
     <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
     <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
 
-    <ListPreference
-        android:defaultValue="0"
-        android:key="timer_list"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null"
-        android:title="@string/pref_header_timer"
-        android:dependency="timer_enabled"
-        />
 
     <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
     <SwitchPreference
         android:defaultValue="false"
-        android:dependency="timer_enabled"
-        android:key="timer_vibrate"
+        android:dependency="@string/timer_enabled_key"
+        android:key="@string/timer_vibrate_key"
         android:title="@string/pref_title_vibrate" />
 
 </PreferenceScreen>
