fix crash; fix pref;; fix vibration; fix AboutActivity; add ads

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,8 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#001122"
     tools:context="com.trx.inputorlost.AboutActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
@@ -14,8 +15,8 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/dummy_content"
-        android:textColor="#33b5e5"
+        android:text="@string/copyright_content"
+        android:textColor="#556677"
         android:textSize="50sp"
         android:textStyle="bold" />
 
@@ -42,14 +43,26 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/dummy_button" />
+                android:text="@string/close_button" />
 
         </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal|top"></RelativeLayout>
+            android:layout_gravity="center_horizontal|top">
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/banner_ad_unit_id"
+                android:layout_alignParentBottom="true">
+            </com.google.android.gms.ads.AdView>
+
+        </RelativeLayout>
+
     </FrameLayout>
 
 </FrameLayout>
