--- a/app/src/main/res/xml/pref_timer.xml
+++ b/app/src/main/res/xml/pref_timer.xml
@@ -19,7 +19,7 @@
 
     <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
     <SwitchPreference
-        android:defaultValue="false"
+        android:defaultValue="true"
         android:dependency="@string/timer_enabled_key"
         android:key="@string/timer_vibrate_key"
         android:title="@string/pref_title_vibrate" />
