--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -8,6 +8,13 @@
         android:icon="@drawable/ic_settings"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/action_share"
+        android:orderInCategory="100"
+        android:title="@string/action_share"
+        android:icon="@mipmap/ic_share_white"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/action_about"
         android:orderInCategory="101"
         android:title="@string/action_about"
